--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,92 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Roboto:wght@300;400;700&display=swap");
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 .App {
-  text-align: center;
+  max-width: 500px;
+  padding: 1.5rem;
+  margin: auto;
+  background-color: aquamarine;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  /* font-family: "Poppins", sans-serif; */
+  font-family: "Roboto", sans-serif;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.head {
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
+  margin-bottom: 2rem;
 }
 
-.App-link {
-  color: #61dafb;
+.ttasks {
+  margin-top: 0.7rem;
+  background-color: rgb(108, 192, 165);
+  border-radius: 4px;
+  box-shadow: 3px 4px 9px rgb(115, 199, 160);
+  padding: 10px;
+  cursor: pointer;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h3 {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex: 1;
+  margin-left: 0.5rem;
+}
+
+.empty-message {
+  color: red;
+  text-align: center;
+  background-color: rgb(242, 246, 251);
+  border-radius: 5px;
+  padding: 20px;
+  font-weight: bold;
+  box-shadow: 3px 4px 8px rgb(44, 38, 38);
+  margin-top: 2rem;
+}
+
+.reminders {
+  background-color: green;
+  width: 4px;
+  height: 40px;
+  position: absolute;
+  box-shadow: 3px 5px 8px rgb(219, 219, 219);
+}
+
+.task-day {
+  margin-left: 0.5rem;
+}
+
+.task-days {
+  margin-left: 0.3rem;
+}
+
+.dash {
+  margin-left: 0.3rem;
+  background-color: blueviolet;
+  width: 4px;
+  height: 20px;
+}
+
+.data-time {
+  display: flex;
+  align-items: center;
+}
+
+footer {
+  text-align: center;
+  padding: 2rem 0;
+}
+
+footer p {
+  font-size: 0.7rem;
+  margin-top: 0.3rem;
 }
